--- a/wsfirstapp/templates/chat_screen.html
+++ b/wsfirstapp/templates/chat_screen.html
@@ -10,11 +10,12 @@
 </div>
 <div>
     <input type="text" name="message" id="message" placeholder="Message" style="padding:10px;width:100%">
+
     <input type="button" value="Send Message" id="send_message" style="background:dodgerblue;color:#fff;padding:10px;border:0px;width:100%">
     <script>
         var roomName='{{ room_name }}';
         var personname='{{ person_name }}';
-        var chatSocket=new WebSocket('ws://'+window.location.host+'/ws/chat/'+roomName+'/'+personname+'/');
+        var chatSocket=new WebSocket('ws://'+window.location.host+'/ws/chat/'+personname+'/');
         chatSocket.onmessage=function(e){
             var data=JSON.parse(e.data)
             var message=data['message']
